# Latency-test-tool

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  create-shortcut.ps1  package.bat  run.bat  setup.bat  vcpkg.json
resources/fonts/: .gitkeep
src/: App.cpp  App.h  Config.cpp  Config.h  LatencyMeasurer.cpp  LatencyMeasurer.h  ResultsManager.cpp  ResultsManager.h  TimestampDisplay.cpp  TimestampDisplay.h  VideoDecoder.cpp  VideoDecoder.h  VideoRenderer.cpp  VideoRenderer.h  main.cpp
